# 2sem_laba5

./: CMakeLists.txt  README.md
src/: main.cpp
